--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vhosts/t/albatross"]
 	path = vhosts/t/albatross
 	url = git@github.com:nsfisis/phperkaigi-2024-albatross.git
+[submodule "vhosts/t/albatross-swift"]
+	path = vhosts/t/albatross-swift
+	url = git@github.com:nsfisis/iosdc-japan-2024-albatross.git
