feat: add albatross.swift 2025

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vhosts/t/albatross-php-2025"]
 	path = vhosts/t/albatross-php-2025
 	url = git@github.com:nsfisis/phperkaigi-2025-albatross.git
+[submodule "vhosts/t/albatross-swift-2025"]
+	path = vhosts/t/albatross-swift-2025
+	url = https://github.com/nsfisis/iosdc-japan-2025-albatross.git
