--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = git@github.com:nsfisis/phperkaigi-2025-albatross.git
 [submodule "vhosts/t/albatross-swift-2025"]
 	path = vhosts/t/albatross-swift-2025
-	url = https://github.com/nsfisis/iosdc-japan-2025-albatross.git
+	url = git@github.com:nsfisis/iosdc-japan-2025-albatross.git
