--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vhosts/t/albatross-swift-2025"]
 	path = vhosts/t/albatross-swift-2025
 	url = git@github.com:nsfisis/iosdc-japan-2025-albatross.git
+[submodule "services/albatross-php-2026"]
+	path = services/albatross-php-2026
+	url = https://github.com/nsfisis/phperkaigi-2026-albatross.git
